Fixes course spacing issues for mega menus

--- a/docroot/sites/all/themes/ilr_theme/scss/components/_courses_and_classes.scss
+++ b/docroot/sites/all/themes/ilr_theme/scss/components/_courses_and_classes.scss
@@ -172,9 +172,10 @@
     color: $h2-text;
   }
   article {
-    @include rhythm(2);
-    @include trailing-border;
-
+    &.node-sdc-course {
+      @include rhythm(2);
+      @include trailing-border;
+    }
     .field-name-body {
       clear: left;
     }
